before application.html.erb

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -5,4 +5,5 @@
 <%= link_to 'ユーザー管理ページへ', users_path %>
 <%= link_to '商品管理ページへ', products_path %>
 <br>
-<%= link_to '購入履歴の登録', new_purchase_path %>
+<%= link_to '購入履歴の登録', new_purchase_path %><br>
+<%= link_to '検索ページへ', search_index_path %>
