--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Guitar</title>
+  <title>Guitar Recipe</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to "GuitarRecipe", root_path, class: "navbar-brand" %>
+          <!--<img src="<%= asset_path "guitar-recipe-logo.jpeg" %>"> -->
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "ユーザー管理", users_path %></li>
+            <li><%= link_to "商品管理", products_path %></li>
+            <li><%= link_to "購入履歴", purchases_path %></li>
+            <li><%= link_to "ユーザー検索",search_index_path %></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
 <%= yield %>
 
