--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <h1>ユーザ検索</h1>
 <%= form_tag(result_search_index_path, :method => :get) do %>
   名前<%= text_field_tag :name %><br>
-  メールアドレス<%= text_field_tag :name %><br>
+  メールアドレス<%= text_field_tag :email %><br>
   <%= submit_tag "検索" %>
 <% end %>
