--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,6 +6,12 @@
   <%= f.label :price %>
   <%= f.text_field :price %>
   <br>
+  <%= f.label :category %>
+  <%= f.text_field :category %>
+  <br>
+  <%= f.label :release %>
+  <%= f.date_field :release %>
+  <br>
   <%= f.submit '追加' %>
 <% end %>
 
