--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,7 +1,7 @@
 <h1>購入履歴を追加する</h1>
 <%= form_for(@purchase) do |f| %>
   <%= f.label :user_id %>
-  <%= f.collection_select :user_id, User.all.order(:id), :id, :name %>
+  <%= f.collection_select :user_id, User.all.order(:id), :id, :fname %>
   <br>
   <%= f.label :product_id %>
   <%= f.collection_select :product_id, Product.all.order(:id), :id, :name %>
