--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -8,5 +8,5 @@
   <br>
   <%= f.submit '編集' %>
 <% end %>
-
-<%= link_to 'TOP', products_path %>
+<%= link_to '戻る' , :back, :class => 'btn btn-default' %>
+<%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
