--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>購入履歴を編集する</h1>
-<%= form_for(@purchase) do |f| %>
+<h1>イベント履歴を編集する</h1>
+<%= form_for(@events) do |f| %>
   <%= f.label :user_id %>
   <%= f.text_field :user_id %>
   <br>
