--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <h1>商品一覧</h1>
 <section class="container-fluid">
   <div class="row"><div class="col-sm-12 col-md-6 col-lg-4">
-    <table class="table table-responsive">
+    <table class="table table-inverse">
       <tr>
         <th>id</th>
         <th>品名</th>
@@ -23,6 +23,6 @@
     </table>
   </div></div>
 </section>
-<%= link_to '商品の追加', new_product_path %>
-<br>
-<%= link_to 'TOP', root_path %>
+<%= link_to '商品の追加', new_product_path , :class => 'btn btn-primary' %>
+<%= link_to '戻る' , :back, :class => 'btn btn-default' %>
+<%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
