--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -12,7 +12,7 @@
   <%= f.label :release %>
   <%= f.date_field :release %>
   <br>
-  <%= f.submit '追加' %>
+  <%= f.submit '追加' , :class => 'btn btn-primary' %>
+  <%= link_to '戻る' , :back, :class => 'btn btn-default' %>
+  <%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
 <% end %>
-
-<%= link_to '戻る', :back %>
