--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -6,7 +6,7 @@
   <%= f.label :product_id %>
   <%= f.collection_select :product_id, Product.all.order(:id), :id, :name %>
   <br>
-  <%= f.submit '追加' %>
+  <%= f.submit '追加', :class => 'btn btn-primary' %>
+  <%= link_to '戻る' , :back, :class => 'btn btn-default' %>
+  <%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
 <% end %>
-
-<%= link_to '戻る', :back %>
