--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,24 @@
 <h1>ユーザ検索</h1>
-<%= form_tag(result_search_index_path, :method => :get) do %>
-  名前<%= text_field_tag :fname %><br>
-  メールアドレス<%= text_field_tag :email1 %><br>
-  都道府県<%= collection_select(:prefecture, :name, Prefecture.all, :id, :name, :include_blank => true) %>
-  <%= submit_tag "検索" %>
-<% end %>
+<section class="container-fluid"><div class="row">
+  <div class="col-sm-12 col-md-8 col-lg-4">
+    <%= form_tag(result_search_index_path, :method => :get) do %>
+      <table class="table table-hover">
+        <tr>
+          <td>名前</td>
+          <td><%= text_field_tag :fname %></td>
+        </tr>
+        <tr>
+          <td>メールアドレス</td>
+          <td><%= text_field_tag :email1 %></td>
+        </tr>
+        <tr>
+          <td>都道府県</td>
+          <td><%= collection_select(:prefecture, :name, Prefecture.all, :id, :name, :include_blank => true) %></td>
+        </tr>
+      </table>
+      <%= submit_tag "検索" , :class => 'btn btn-primary' %>
+      <%= link_to '戻る' , :back, :class => 'btn btn-default' %>
+      <%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
+    <% end %>
+  </div>
+</div></section>
