--- a/app/views/search/result.html.erb
+++ b/app/views/search/result.html.erb
@@ -1,55 +1,60 @@
 <h1>search result</h1>
 検索結果: <%= @users.count %>件<br>
 <% if @users.count != 0 %>
-  <!--section class="container-fluid"><div class="row"><div class="col-sm-11 col-md-8 col-lg-4"-->
   <section class="container-fluid"><div class="row"><div class="col-sm-12 col-md-12 col-lg-12">
-    <table class="table table-responsive">
-      <tr>
-        <th colspan="15">ユーザ情報</th>
-        <th colspan="<%= @products.count %>">購入履歴</th>
-      </tr>
-      <tr>
-        <th>姓(漢字)</th>
-        <th>名(漢字)</th>
-        <th>姓(カナ)</th>
-        <th>名(カナ)</th>
-        <th>メールアドレス1</th>
-        <th>メールアドレス2</th>
-        <th>性別</th>
-        <!--td><%#= f.select :sex, [['女性',0],['男性',1]] %></td-->
-        <th>郵便番号</th>
-        <th>都道府県</th>
-        <!--td><%#= f.collection_select :prefecture, Prefecture.all, :id, :name %></td-->
-        <th>住所</th>
-        <th>電話番号</th>
-        <th>生年月日</th>
-        <th>ギター歴</th>
-        <th>お持ちのギター本数</th>
-        <th>お好きなジャンル</th>
-        <% @products.each do |product| %>
-          <th><%= product.name %></th>
-        <% end %>
-      </tr>
-      <% @users.each do |user| %>
+    <table class="table table-hover">
+      <thead class="thead-default">
         <tr>
-          <% @user_column.each do |c| %>
-            <td><%= user[:"#{c}"] %></td>
-          <% end %>
-          <% @purchases.each do |purchase| %>
-            <% if purchase.user_id == user.id %>
-              <% @products.each do |product| %>
-                <% if purchase.user_id == user.id && purchase.product_id == product.id %>
-                  <td>購入済み</td>
-                <% else %>
-                  <td>-</td>
-                <% end %>
-              <% end %> <!-- @products.each do |product| -->
-            <% end %> <!-- if purchaase.user_id == user.id -->
-          <% end %> <!-- @purchases.each do |purchase| -->
+          <th colspan="15">ユーザ情報</th>
+          <th colspan="<%= @products.count %>">購入履歴</th>
         </tr>
+        <tr>
+          <th>姓(漢字)</th>
+          <th>名(漢字)</th>
+          <th>姓(カナ)</th>
+          <th>名(カナ)</th>
+          <th>メールアドレス1</th>
+          <th>メールアドレス2</th>
+          <th>性別</th>
+          <!--td><%#= f.select :sex, [['女性',0],['男性',1]] %></td-->
+          <th>郵便番号</th>
+          <th>都道府県</th>
+          <!--td><%#= f.collection_select :prefecture, Prefecture.all, :id, :name %></td-->
+          <th>住所</th>
+          <th>電話番号</th>
+          <th>生年月日</th>
+          <th>ギター歴</th>
+          <th>お持ちのギター本数</th>
+          <th>お好きなジャンル</th>
+          <% @products.each do |product| %>
+            <th><%= product.name %></th>
+          <% end %>
+        </tr>
+      </thead>
+      <% @users.each do |user| %>
+        <tbody>
+          <tr>
+            <% @user_column.each do |c| %>
+              <td><%= user[:"#{c}"] %></td>
+            <% end %>
+            <% @purchases.each do |purchase| %>
+              <% if purchase.user_id == user.id %>
+                <% @products.each do |product| %>
+                  <% if purchase.user_id == user.id && purchase.product_id == product.id %>
+                    <td>購入済み</td>
+                  <% else %>
+                    <td>-</td>
+                  <% end %>
+                <% end %> <!-- @products.each do |product| -->
+              <% end %> <!-- if purchaase.user_id == user.id -->
+            <% end %> <!-- @purchases.each do |purchase| -->
+          </tr>
+        </tbody>
       <% end %>
     </table>
   </div></div></section>
 <% else %>
   <p>no user</p>
 <% end %>
+<%= link_to '戻る' , :back, :class => 'btn btn-default' %>
+<%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
