--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,29 @@
 <h1>User一覧</h1>
-<table border="3">
-  <tr>
-    <th>id</th>
-    <th>姓</th>
-    <th>名</th>
-    <th>メールアドレス1</th>
-    <th>編集する</th>
-    <th>購入履歴</th>
-    <th>削除</th>
-  </tr>
-  <% @users.each do |user| %>
+<section class="container-fluid"><div class="row"><div class="col-sm-12 col-md-10 col-lg-8">
+  <table class="table table-hover">
     <tr>
-      <td><%= user.id %></td>
-      <td><%= user.fname %></td>
-      <td><%= user.lname %></td>
-      <td><%= user.email1 %></td>
-      <td><%= link_to '編集', edit_user_path(user.id) %></td>
-      <td><%= link_to '購入履歴', history_user_path(user.id) %></td>
-      <td><%= link_to '削除', user_path(user.id), method: :delete, data: {confirm: '本当に削除していいですか？' }  %></td>
+      <th>id</th>
+      <th>姓</th>
+      <th>名</th>
+      <th>メールアドレス1</th>
+      <th>編集する</th>
+      <th>購入履歴</th>
+      <th>削除</th>
     </tr>
-  <% end %>
-</table>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.id %></td>
+        <td><%= user.fname %></td>
+        <td><%= user.lname %></td>
+        <td><%= user.email1 %></td>
+        <td><%= link_to '編集', edit_user_path(user.id) %></td>
+        <td><%= link_to '購入履歴', history_user_path(user.id) %></td>
+        <td><%= link_to '削除', user_path(user.id), method: :delete, data: {confirm: '本当に削除していいですか？' }  %></td>
+      </tr>
+    <% end %>
+  </table>
+</div></div></section>
+<%= link_to '新規作成', new_user_path , :class => 'btn btn-primary' %>
 <hr>
 <h3>ユーザのcsvインポート</h3>
 <p>形式: name,email<br>例: satoh,satoh@satoh.com</p>
@@ -30,6 +33,5 @@
 <% end %>
 <br>
 
-<%= link_to 'ユーザの新規作成', new_user_path %>
 <br>
 <%= link_to 'TOP', root_path %>
