--- a/app/views/search/result.html.erb
+++ b/app/views/search/result.html.erb
@@ -13,9 +13,9 @@
           <th>名(漢字)</th>
           <th>姓(カナ)</th>
           <th>名(カナ)</th>
+          <th>性別</th>
           <th>メールアドレス1</th>
           <th>メールアドレス2</th>
-          <th>性別</th>
           <!--td><%#= f.select :sex, [['女性',0],['男性',1]] %></td-->
           <th>郵便番号</th>
           <th>都道府県</th>
@@ -31,25 +31,29 @@
           <% end %>
         </tr>
       </thead>
+      
+      <!--### ユーザ毎に繰り返し ###-->
       <% @users.each do |user| %>
-        <tbody>
-          <tr>
-            <% @user_column.each do |c| %>
-              <td><%= user[:"#{c}"] %></td>
-            <% end %>
-            <% @purchases.each do |purchase| %>
-              <% if purchase.user_id == user.id %>
-                <% @products.each do |product| %>
-                  <% if purchase.user_id == user.id && purchase.product_id == product.id %>
-                    <td>購入済み</td>
-                  <% else %>
-                    <td>-</td>
-                  <% end %>
-                <% end %> <!-- @products.each do |product| -->
-              <% end %> <!-- if purchaase.user_id == user.id -->
-            <% end %> <!-- @purchases.each do |purchase| -->
-          </tr>
-        </tbody>
+        <!-- ### ここからテーブルの1列 ###-->
+        <tr>
+          <!--### ユーザの属性を表示 ###-->
+          <% @user_column.each do |c| %>
+            <td><%= user[:"#{c}"] %></td>
+          <% end %>
+          
+          <!--### ユーザの購入履歴を表示 ###-->
+          <% @purchases.each do |purchase| %>
+            <% if purchase.user_id == user.id %>
+              <% @products.each do |product| %>
+                <% if purchase.user_id == user.id && purchase.product_id == product.id %>
+                  <td>購入済み</td>
+                <% else %>
+                  <td>-</td>
+                <% end %>
+              <% end %> <!-- @products.each do |product| -->
+            <% end %> <!-- if purchaase.user_id == user.id -->
+          <% end %> <!-- @purchases.each do |purchase| -->
+        </tr>
       <% end %>
     </table>
   </div></div></section>
