create import paypal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "ペイパルからのインポート", paypals_path %></li>
             <li><%= link_to "ユーザー管理", users_path %></li>
             <li><%= link_to "商品管理", products_path %></li>
             <li><%= link_to "購入履歴", purchases_path %></li>
