--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,22 +1,22 @@
 <h1>商品一覧</h1>
 <section class="container-fluid">
-  <div class="row"><div class="col-sm-12 col-md-6 col-lg-4">
-    <table class="table table-inverse">
+  <div class="row"><div class="col-sm-12 col-md-12 col-lg-12">
+    <table class="table table-hover table-bordered">
       <tr>
         <th>id</th>
         <th>品名</th>
         <th>価格</th>
-        <th>カテゴリー</th>
-        <th>リリース日</th>
+        <th>手数料</th>
+        <th>ペイパル上の商品ID</th>
         <th>編集する</th>
       </tr>
       <% @products.each do |product| %>
         <tr>
           <td><%= product.id %></td>
-          <td><%= product.name %></td>
+          <td><%= product.title %></td>
           <td><%= product.price %></td>
-          <td><%= product.category %></td>
-          <td><%= product.release %></td>
+          <td><%= product.fee %></td>
+          <td><%= product.paypal_product_id %></td>
           <td><%= link_to '編集', edit_product_path(product.id) %></td>
         </tr>
       <% end %>
