--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,16 +1,17 @@
 <h1>購入履歴一覧</h1>
-<table border="3">
+<div class="container-fluid"><div class="row"><div class="col-sm-12">
+<table class="table table-hover table-bordered">
   <tr>
     <th>id</th>
-    <th>user_id</th>
-    <th>product_id</th>
+    <th>購入者メールアドレス</th>
+    <th>商品番号</th>
     <th>編集する</th>
   </tr>
   <% @purchases.each do |purchase| %>
     <tr>
       <td><%= purchase.id %></td>
-      <td><%= purchase.user_id %></td>
-      <td><%= purchase.product_id %></td>
+      <td><%= purchase.user.email %></td>
+      <td><%= purchase.product.title %></td>
       <td><%= link_to '編集', edit_purchase_path(purchase.id) %></td>
     </tr>
   <% end %>
@@ -19,3 +20,4 @@
 <%= link_to '購入履歴の新規作成', new_purchase_path , :class => 'btn btn-primary' %>
 <%= link_to '戻る' , :back, :class => 'btn btn-default' %>
 <%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
+</div></div></div>
