--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,11 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "ペイパルからのインポート", paypals_path %></li>
+            <!--<li><%= link_to "ペイパルからのインポート", paypals_path %></li>-->
             <li><%= link_to "ユーザー管理", users_path %></li>
             <li><%= link_to "商品管理", products_path %></li>
             <li><%= link_to "購入履歴", purchases_path %></li>
-            <li><%= link_to "イベント履歴", events_path %></li>
+            <!--<li><%= link_to "イベント履歴", events_path %></li>-->
             <li><%= link_to "ユーザー検索",search_index_path %></li>
           </ul>
         </div>
