--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 <section class="container-fluid">
   <div class="row"><div class="col-sm-12 col-md-12 col-lg-12">
     <table class="table table-hover table-bordered">
-      <tr>
+      <tr class="info">
         <th>id</th>
         <th>品名</th>
         <th>価格</th>
