--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,7 +1,7 @@
 <h1>購入履歴一覧</h1>
 <div class="container-fluid"><div class="row"><div class="col-sm-12">
 <table class="table table-hover table-bordered">
-  <tr>
+  <tr class="info">
     <th>id</th>
     <th>購入者メールアドレス</th>
     <th>商品番号</th>
