--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,11 +5,11 @@
       <table class="table table-hover">
         <tr>
           <td>名前</td>
-          <td><%= text_field_tag :fname %></td>
+          <td><%= text_field_tag :name %></td>
         </tr>
         <tr>
           <td>メールアドレス</td>
-          <td><%= text_field_tag :email1 %></td>
+          <td><%= text_field_tag :email %></td>
         </tr>
         <tr>
           <td>都道府県</td>
