--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h1>User一覧</h1>
 <section class="container-fluid"><div class="row"><div class="col-sm-12 col-md-12 col-lg-12">
   <table class="table table-hover table-bordered">
-    <tr>
+    <tr class="info">
       <th>id</th>
       <th>名前</th>
       <th>メールアドレス</th>
@@ -15,8 +15,7 @@
       <th>国</th>
       <th>国コード</th>
       <th>電話番号</th>
-      <th>編集</th>
-      <th>削除</th>
+      <th>詳細</th>
     </tr>
     <% @users.each do |user| %>
       <tr>
@@ -33,9 +32,7 @@
         <td><%= user.country_name %></td>
         <td><%= user.country_code %></td>
         <td><%= user.telephone_number %></td>
-        <td><%= link_to '編集', edit_user_path(user.id) %></td>
-        <!--<td><%= link_to '購入履歴', history_user_path(user.id) %></td>-->
-        <td><%= link_to '削除', user_path(user.id), method: :delete, data: {confirm: '本当に削除していいですか？' }  %></td>
+        <td><%= link_to '詳細', user_path(user.id) %></td>
       </tr>
     <% end %>
   </table>
