--- a/app/views/search/result.html.erb
+++ b/app/views/search/result.html.erb
@@ -22,24 +22,29 @@
         <!-- ### ここからテーブルの1列 ###-->
         <tr>
           <!--### ユーザの属性を表示 ###-->
-          <%# @user_column.each do |c| %>
-            <td><%= link_to user.name, user_path(user.id) %></td>
-            <td><%= link_to user.email, user_path(user.id) %></td>
-            <!--<td><%#= user[:"#{c}"] %></td>-->
-          <%# end %>
+          <td><%= link_to user.name, user_path(user.id) %></td>
+          <td><%= link_to user.email, user_path(user.id) %></td>
           
           <!--### ユーザの購入履歴を表示 ###-->
-          <% @purchases.each do |purchase| %>
-            <% if purchase.user_id == user.id %>
-              <% @products.each do |product| %>
-                <% if purchase.user_id == user.id && purchase.product_id == product.id %>
-                  <td>購入済み</td>
-                <% else %>
-                  <td>-</td>
-                <% end %>
-              <% end %> <!-- @products.each do |product| -->
-            <% end %> <!-- if purchaase.user_id == user.id -->
-          <% end %> <!-- @purchases.each do |purchase| -->
+          <% @products.each do |product| %>
+            <% if @purchases.where("user_id = ? and product_id = ?", user.id , product.id).count != 0 %>
+              <td>購入済み</td>
+            <% else %>
+              <td>-</td>
+            <% end %>
+          <% end %>
+          
+          <%# @purchases.each do |purchase| %>
+            <%# if purchase.user_id == user.id %>
+              <%# @products.each do |product| %>
+                <%# if purchase.user_id == user.id && purchase.product_id == product.id %>
+                  <!--<td>購入済み</td>-->
+                <%# else %>
+                  <!--<td>-</td>-->
+                <%# end %>
+              <%# end %> <!-- @products.each do |product| -->
+            <%# end %> <!-- if purchaase.user_id == user.id -->
+          <%# end %> <!-- @purchases.each do |purchase| -->
         </tr>
       <% end %>
     </table>
