csv controller create

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
       <tr class="info">
         <th>id</th>
         <th>品名</th>
-        <th>価格</th>
+        <!--<th>価格</th>-->
         <th>ペイパル上の商品ID</th>
         <th>編集する</th>
       </tr>
@@ -13,7 +13,7 @@
         <tr>
           <td><%= product.id %></td>
           <td><%= product.title %></td>
-          <td><%= product.price %></td>
+          <!--<td><%#= product.price %></td>-->
           <td><%= product.paypal_product_id %></td>
           <td><%= link_to '編集', edit_product_path(product.id) %></td>
         </tr>
