--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,16 +1,16 @@
 <h1>商品を追加する</h1>
 <%= form_for(@product) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <!--<br>
+  <%#= f.label :price %>
+  <%#= f.text_field :price %>-->
   <br>
-  <%= f.label :price %>
-  <%= f.text_field :price %>
+  <%= f.label :productgroup_id %>
+  <%= f.text_field :productgroup_id %>
   <br>
-  <%= f.label :category %>
-  <%= f.text_field :category %>
-  <br>
-  <%= f.label :release %>
-  <%= f.date_field :release %>
+  <%= f.label :publisher %>
+  <%= f.text_field :publisher %>
   <br>
   <%= f.submit '追加' , :class => 'btn btn-primary' %>
   <%= link_to '戻る' , :back, :class => 'btn btn-default' %>
