view chotto henkou

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -21,6 +21,6 @@
     </table>
   </div></div>
 </section>
-<%= link_to '商品の追加', new_product_path , :class => 'btn btn-primary' %>
+<!--<%= link_to '商品の追加', new_product_path , :class => 'btn btn-primary' %>-->
 <%= link_to '戻る' , :back, :class => 'btn btn-default' %>
 <%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
