--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -21,7 +21,7 @@
   <% end %>
 </table>
 <br>
-<%= link_to '購入履歴の新規作成', new_purchase_path , :class => 'btn btn-primary' %>
+<!--<%= link_to '購入履歴の新規作成', new_purchase_path , :class => 'btn btn-primary' %>-->
 <%= link_to '戻る' , :back, :class => 'btn btn-default' %>
 <%= link_to 'TOP' , root_path, :class => 'btn btn-default' %>
 </div></div></div>
