--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,4 +1,7 @@
 <%= notice %>
+<% if alert %>
+  <text class="text-danger"><%= alert %></text>
+<% end %>
 <section class="container-fluid top-content">
   <h1>ギター会員管理データベース</h1>
   <br>
