--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,19 +21,21 @@
           <!--<img src="<%= asset_path "guitar-recipe-logo.jpeg" %>"> -->
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
+          <!--<ul class="nav navbar-nav navbar-right">
             <li><%= link_to "ユーザー管理", users_path %></li>
             <li><%= link_to "商品管理", products_path %></li>
             <li><%= link_to "購入履歴", purchases_path %></li>
-            <!--<li><%= link_to "イベント履歴", events_path %></li>-->
+            <li><%= link_to "イベント履歴", events_path %></li>
             <li><%= link_to "ユーザー検索",search_index_path %></li>
-          </ul>
+          </ul>-->
         </div>
       </div>
     </nav>
   </header>
 
 <%= yield %>
-
+  <footer>
+    <p>Copyright ギターのレシピ 2018</p>
+  </footer>
 </body>
 </html>
