--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<h1>User一覧</h1>
 <section class="container-fluid"><div class="row"><div class="col-sm-12 col-md-12 col-lg-12">
+  <h1>ユーザ一覧</h1>
   <table class="table table-hover table-bordered">
     <tr class="info">
       <th>メールアドレス</th>
