--- a/app/views/search/product_search.erb
+++ b/app/views/search/product_search.erb
@@ -1,5 +1,5 @@
 <section class="container-fluid"><div class="row"><div class="col-sm-12 col-md-12 col-lg-12">
-  <h1>「<%= @product.title %>」 を持って<u><%= @message %></u>人</h1>
+  <h1>"<%= @product.title %>" (商品id:<%= @product.id %>) を持って<u><%= @message %></u>人</h1>
   検索結果: <%= @users_data.count %>件<br>
   <% if @users_data.count != 0 %>
     <table class="table table-hover table-bordered">
