--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -19,6 +19,8 @@
   
   <%# 本文 %>
   <section class="container-fluid top-content">
+    
+    <%# =================== 登録情報 ======================== %>
     <h1>登録情報を見る</h1>
     <hr>
     <div class="row">
@@ -44,6 +46,8 @@
         </div>
       </div>
     <div/>
+    
+    <%# =================== ユーザ検索 ======================== %>
     <div class="row">
       <!--<h4>現在のイベント数: <%= @events_num %></h4>-->
       <div class="col-sm-12">
@@ -68,6 +72,8 @@
         <% end %>
       </div>
     </div>
+    
+    <%# =================== 購入履歴検索 ======================== %>
     <div class="row">
       <div class="col-sm-12">
         <hr class="hr-h1">
@@ -86,6 +92,8 @@
         <% end %>
       </div>
     </div>
+    
+    <%# =================== csvインポート ======================== %>
     <div class="row">
       <div class="col-sm-12">
         <hr class="hr-h1">
